<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        />

    <EditText
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:id="@+id/txt_email"
        />

    <EditText
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/txt_password"
        />

    <Button
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:onClick="login"
        android:text="@string/login_user"
        android:id="@+id/btn_login"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/not_registered"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:hint="@string/register"
            android:id="@+id/view_register"
            />

    </LinearLayout>
</LinearLayout>